<resources>
    <string name="app_name">GymKhana</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ready_in_minutes">Ready in %1$d minutes</string>
    <string name="servings">Servings: %1$d</string>
    <string name="carbohydrates">Carbohydrates: %.2f g</string>

    <string name="calories">Calories: %.2f</string>
    <string name="carbs">Carbs: %.2f g</string>
    <string name="fat">Fat: %.2f g</string>
    <string name="protein">Protein: %.2f g</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_photo" />
    <string name="upload_photo" />
    <string name="title_activity_user_details">UserDetails</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save">save</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>

        <string-array name="time_frame_options">
            <item>Day</item>
        </string-array>

        <string-array name="target_calories_options">
            <item>1500</item>
            <item>2000</item>
            <item>2500</item>
            <item>3000</item>
        </string-array>

        <string-array name="diet_options">
            <item>Gluten Free</item>
            <item>Ketogenic</item>
            <item>Vegetarian</item>
            <item>Lacto-Vegetarian</item>
            <item>Ovo-Vegetarian</item>
            <item>Vegan</item>
            <item>Pescetarian</item>
            <item>Paleo</item>
            <item>Primal</item>
            <item>Low FODMAP</item>
            <item>Whole30</item>
        </string-array>
    </resources>