<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="420dp"
    android:layout_height="730dp"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Flax">

        <LinearLayout
            android:layout_width="455dp"
            android:layout_height="809dp"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginRedirectText"
            tools:ignore="UnknownIdInLayout,UselessLeaf">

        </LinearLayout>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="350dp"
            android:layout_height="51dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/lavender_border"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="350dp"
            android:layout_height="51dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/lavender_border"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="8dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            android:autofillHints=""
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="350dp"
            android:layout_height="51dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="35dp"
            android:text="@string/login"
            android:background="@drawable/buttoncolor"
            android:textSize="18sp"
            app:cornerRadius="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="137dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="137dp"
            android:padding="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/signupRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="97dp"
            android:padding="8dp"
            android:text="@string/not_yet_registered_signup"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="138dp"
            android:layout_marginTop="287dp"
            android:layout_marginEnd="176dp"
            android:gravity="center"
            android:text="@string/log_in"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#0277BD"
            android:textDirection="anyRtl"
            android:textIsSelectable="false"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>